Bug 1543809 - Can't run with XPCOM_MEM_BLOAT_LOG=1 on OS X r=Alex_Gaynor

Don't assume XPCOM_MEM_BLOAT_LOG is a filename. XPCOM_MEM_BLOAT_LOG and XPCOM_MEM_LEAK_LOG can be set to a filename or "1" or "2" for logging to stdout and stderr respectively.

Set the debug write directory for XPCOM_MEM_LEAK_LOG in the same way we already to for XPCOM_MEM_BLOAT_LOG.

Differential Revision: https://phabricator.services.mozilla.com/D27968

--HG--
extra : moz-landing-system : lando