dom/ipc/ContentParent.cpp
@@ -1990,16 +1990,12 @@ static void CacheSandboxParams(std::vector<std::string>& aCachedParams) {
 
   // DEBUG_WRITE_DIR
 #  ifdef DEBUG
-  // When a content process dies intentionally (|NoteIntentionalCrash|), for
-  // tests it wants to log that it did this. Allow writing to this location
-  // that the testrunner wants.
-  char* bloatLog = PR_GetEnv("XPCOM_MEM_BLOAT_LOG");
-  if (bloatLog != nullptr) {
-    // |bloatLog| points to a specific file, but we actually write to a sibling
-    // of that path.
-    nsAutoCString bloatDirectoryPath =
-        nsMacUtilsImpl::GetDirectoryPath(bloatLog);
-    info.debugWriteDir = bloatDirectoryPath.get();
+  // For bloat/leak logging or when a content process dies intentionally
+  // (|NoteIntentionalCrash|) for tests, it wants to log that it did this.
+  // Allow writing to this location.
+  nsAutoCString bloatLogDirPath;
+  if (NS_SUCCEEDED(nsMacUtilsImpl::GetBloatLogDir(bloatLogDirPath))) {
+    info.debugWriteDir = bloatLogDirPath.get();
   }
 #  endif  // DEBUG
 
@@ -5715,7 +5711,7 @@ mozilla::ipc::IPCResult ContentParent::RecvAttachBrowsingContext(
     }
 
     Unused << entry->GetKey()->SendAttachBrowsingContext(
-      child->GetIPCInitializer());
+        child->GetIPCInitializer());
   }
 
   return IPC_OK();
