xpcom/base/nsMacUtilsImpl.h
@@ -24,17 +24,19 @@ class nsMacUtilsImpl final : public nsIMacUtils {
   nsMacUtilsImpl() {}
 
 #if defined(MOZ_SANDBOX)
-  static bool GetAppPath(nsCString &aAppPath);
+  static bool GetAppPath(nsCString& aAppPath);
 
 #  ifdef DEBUG
-  static nsAutoCString GetDirectoryPath(const char *aPath);
+  static nsresult GetBloatLogDir(nsCString& aDirectoryPath);
+  static nsresult GetDirectoryPath(const char* aPath,
+                                   nsCString& aDirectoryPath);
 #  endif /* DEBUG */
 #endif   /* MOZ_SANDBOX */
 
  private:
   ~nsMacUtilsImpl() {}
 
-  nsresult GetArchString(nsAString &aArchString);
+  nsresult GetArchString(nsAString& aArchString);
 
   // A string containing a "-" delimited list of architectures
   // in our binary.
